test/fail/expr-range.rnp
let a = macro;
---
SyntaxError: Unexpected token
fail/expr-range.rnp:1:9
> 1 | let a = macro;
    |         ^^^^^ Unexpected token
  2 | 
